<resources>
    <string name="app_name">Estacionamientos</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Confirmar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_hola">¡Hola, %s!</string>
    <string name="signup_phone_ask">Necesitamos confirmar tu número de teléfono para poder continuar</string>
    <string name="signup_phone_placeholder">Número</string>
    <string name="error_no_internet">Connectivity error</string>
    <string name="retry_button">Retry</string>
    <string name="error_signup_failed">Error al realizar el registro</string>
    <string name="error_phone_empty">Este campo es obligatorio</string>
    <string name="txt_reserva_en">Reserva en %s</string>
    <string name="txt_usuario_reserva">Al usuario %s</string>
    <string name="btn_ver_en_el_mapa">Ver en el mapa</string>
    <string name="title_activity_reservation_in_map">Map</string>
    <string name="cancel_reservation">Cancelar Reserva</string>
    <string name="solicitudes_pendientes">Solicitudes pendientes</string>
    <string name="proxima_reserva">Próxima reserva</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_rechazar">Rechazar</string>
    <string name="btn_center_at_parking_lot">Centrar el mapa en el estacionamiento</string>
    <string name="buscar_un_estacionamiento">Buscar cerca de una ubicación</string>
    <string name="calle_altura_ciudad">Calle, altura, ciudad</string>
    <string name="buscar">Buscar</string>
    <string name="location_search_error">Hubo un error al preguntar por esta dirección. Intentá más tarde</string>
    <string name="location_search_not_found">No se encontró esa dirección, ¿Estás seguro que es correcta?</string>
    <string name="use_my_location">Usar mi ubicación actual</string>
    <string name="title_address_search_input">Ingresá dirección donde buscar</string>
    <string name="duration_in_hours">Duración (horas)</string>
    <string name="time">Hora</string>
    <string name="date">Día</string>
    <string name="title_when">¿Para cuando querés estacionar?</string>
    <string name="btn_set_date">Ingresar día</string>
    <string name="btn_set_time">Ingresar hora</string>
    <string name="max_distance_lbl">Distancia máxima de búsqueda (en metros)</string>
    <string name="options">Opciones</string>
    <string name="center">Centrar</string>
    <string name="parking_lots_not_found">No se obtuvo resultados. Intente nuevamente cambiando los parámetros de búsqueda</string>
    <string name="pending_status">Pendiente</string>
    <string name="notif_channel">estacionamientos_notif_service</string>
    <string name="parking_adm_title">Administrar estacionamientos</string>
    <string name="add_parking_lot">Agregar estacionamiento</string>
    <string name="lbl_seleccionar_provincia">Seleccioná Provincia</string>
    <string name="lbl_seleccionar_pais">Seleccioná País</string>
    <string name="btn_check_address_onmap">Confirmá la dirección en mapa</string>
    <string name="lbl_description">Descripción</string>
    <string name="lbl_lot_number">Número de lote</string>
    <string name="lbl_ars">ARS </string>
    <string name="lbl_lot_rate">Precio</string>
    <string name="btn_edit_lot">Editar lote</string>
    <string name="btn_edit_schedule">Editar horarios</string>
    <string name="error_no_lot">¡Tenés que ingresar al menos un lote!</string>
    <string name="lbl_address">Dirección</string>
    <string name="no_schedule_set">No hay horarios guardados para éste lote</string>
    <string name="monday">L</string>
    <string name="tuesday">Ma</string>
    <string name="wednesday">Mi</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>
    <string name="lbl_time_from">Hora de inicio</string>
    <string name="lbl_time_to">Hora de fin</string>
    <string name="star">&#9733;</string>
    <string name="error_no_day_selected">Tenés que seleccionar al menos un día</string>
    <string name="edit_lot_title">Editar lote</string>
    <string name="add_new_lot">Agregar lote</string>
    <string name="delete_lot">Eliminar lote</string>
    <string name="btn_review">Calificar</string>
    <string name="title_reservation_history">Historial de reservas</string>
    <string name="rate_placeholder">$ %.2f</string>
    <string name="no_data">Sin datos</string>
    <string name="puntaje_de_prestador">Puntaje de prestador</string>
</resources>
