<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_parking_lot_layout"
    tools:context=".parkinglots.AddParkingLotFragment">
    <LinearLayout
        android:id="@+id/linearLayout_add_parking_lot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/txt_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle_altura_ciudad"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp"
            tools:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/lbl_state"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_seleccionar_provincia"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_cities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:dropDownWidth="match_parent"
                android:entries="@array/cities_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/lbl_country"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_seleccionar_pais"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/countries_array"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVerEnMapa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_check_address_onmap"
            android:visibility="gone"
            android:textSize="12sp"/>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_lot_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="2"
                android:hint="@string/lbl_lot_number"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                tools:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="7dp"
                android:text="@string/lbl_ars"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/num_lot_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="7dp"
                android:hint="@string/lbl_lot_rate"
                android:inputType="number"
                android:layout_weight="2"
                android:textSize="14sp"
                android:layout_alignRight="@+id/txt_lot_number"
                tools:ignore="LabelFor,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">
            <CheckBox
                android:id="@+id/chk_monday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday" />
            <CheckBox
                android:id="@+id/chk_tuesday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday" />
            <CheckBox
                android:id="@+id/chk_wednesday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday" />
            <CheckBox
                android:id="@+id/chk_thursday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday" />
            <CheckBox
                android:id="@+id/chk_friday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday" />
            <CheckBox
                android:id="@+id/chk_saturday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday" />
            <CheckBox
                android:id="@+id/chk_sunday_lot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/lbl_time_from"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_time_from"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_time_from"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/schedule_time_array"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lbl_time_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_time_to"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_time_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/schedule_time_array"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_lot_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lbl_description"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                android:layout_below="@+id/txt_lot_number"
                tools:textSize="14sp" />

            <Button
                android:id="@+id/btn_add_lot"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/txt_lot_description"
                android:layout_below="@+id/txt_lot_number"
                android:text="Agregar lote" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/parkingLotList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save_parking_lot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/save" />
            <Button
                android:id="@+id/btn_cancel_parking_lot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>