<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parking_lot_fragmentlayout"
    tools:context=".dashboard.NavigationDrawerActivity">

    <LinearLayout
        android:id="@+id/linearLayout_parking_lot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal"
            android:text="@string/parking_adm_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/lbl_add_parking_lot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:text="@string/add_parking_lot"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/button_add_parking_lot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/add_parking_lot"
                android:scaleType="fitStart"
                android:src="@drawable/ic_add_circle"
                android:tint="@android:color/holo_green_dark"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_full_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/lbl_address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <Button
                android:id="@+id/btn_add_new_lot"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="fill_vertical|end"
                android:text="@string/add_new_lot"
                android:visibility="gone"
                android:layout_gravity="end"
                android:textColor="@color/colorAccent"
                tools:visibility="visible"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/parkingLotList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>